<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="felipe.jean.jokenpo.MainActivity">


  <android.support.v7.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="16dp">

    <TextView
        android:id="@+id/tvOpcoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opçoes"
        android:textSize="30sp"
        />


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="horizontal"
    android:padding="20dp"
       >


      <ImageView
     android:id="@+id/ivPedra"
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:background="@drawable/pedra"/>

      <ImageView
          android:id="@+id/ivPapel"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:background="@drawable/papel"/>

      <ImageView
          android:id="@+id/ivTesoura"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:background="@drawable/tesoura"
          />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ultimaJogada"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:gravity="center"
          android:text="@string/jogadaPlayer"
          />
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:gravity="center"
          android:text="@string/jogadaPC"
          />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

  <ImageView
       android:id="@+id/ivjogadaPlayer"
       android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_weight="0.5"
      />

  <ImageView
      android:id="@+id/ivjogadaPC"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_weight="0.5"
      />
</LinearLayout>

<TextView
    android:id="@+id/tvResultado"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/resultado"
    android:textSize="25dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/venceu"
    />


  </android.support.v7.widget.LinearLayoutCompat>










</android.support.constraint.ConstraintLayout>
